Teleport context menus and tooltips to <body> and use strategy fixed so they will escape clipping parents; also fix/move some CSS accordingly; also fix a file.id -> file bug and other minor cleanup

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -125,6 +125,16 @@ html, body {
   height: 100%;
   width: 100%;
 }
+
+/* General styles */
+body {
+  font-family: "Source Sans 3", sans-serif;
+  font-weight: var(--weight-regular);
+  font-size: 16px;
+  line-height: 1.25;
+  color: var(--extra-dark);
+}
+
 /* Interactive focus/hover states */
 /* Transient hover or keyboard focus highlight */
 .item:hover,
